# disk-analyser

./: .gitignore  LICENSE  MAS_SUBMISSION.md  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
scripts/: README.md  build_for_mas.sh  build_universal.sh  bump_version.sh  cleanup.sh  create_mas_package.sh  sign_for_mas.sh  switch_entitlements.sh
src/: App.tsx  stores.example.tsx  stores.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  entitlements.direct.plist  entitlements.mas.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: README.md  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classifier.rs  lib.rs  main.rs  safety.rs  scanner.rs  scanner_async.rs  scanner_bfs.rs  storage.rs  types.rs
src/components/: CategoryStats.tsx  DeletionDialog.tsx  ErrorBoundary.tsx  FileListView.tsx  LargestFilesView.tsx  MillerColumns.tsx  PermissionDialog.tsx  ProgressIndicator.tsx  ScanningOverlay.tsx  SidebarNavigator.tsx  SunburstChart.tsx  Toast.tsx  ViewModeTabs.tsx
src/services/: scanService.ts
src/utils/: performance.ts  performanceTest.ts
